--- a/src/styl/test.styl
+++ b/src/styl/test.styl
@@ -1,3 +1,23 @@
-p
-  text-align center;
-  color: red;
+body {
+    .grid{
+        max-width:600px;
+        //height: 400px
+        background: #ddd;
+        position: relative;
+
+      .cell{
+        position: absolute;
+        border: 1px solid #aaa;
+        &.type-0{
+          background-color:red;
+        }
+        &.type-1{
+          background-color: transparent;
+        }
+        &.type-2{
+          background-color: #00b0e8;
+        }
+      }
+    }
+
+}
