--- a/src/styl/test.styl
+++ b/src/styl/test.styl
@@ -1,10 +1,18 @@
+
+//#main_screen{
+//    max-width:600px;
+//    //height: 400px
+//    background: #ddd;
+//    position: relative;
+//}
+
 body {
-//margin: 0;
-    .grid{
-        max-width:600px;
-        //height: 400px
-        background: #ddd;
-        position: relative;
+
+       .grid{
+            max-width:600px;
+            //height: 400px
+            background: #ddd;
+            position: relative;
 
       .cell{
         position: absolute;
@@ -20,5 +28,4 @@ body {
         }
       }
     }
-
-}
+  }
