create game view and architecture for views

--- a/src/styl/test.styl
+++ b/src/styl/test.styl
@@ -27,5 +27,8 @@ body {
           background-color: #00b0e8;
         }
       }
+      .tile{
+            position: absolute;
+      }
     }
   }
