create game view and architecture for views

--- a/src/styl/test.styl
+++ b/src/styl/test.styl
@@ -15,20 +15,22 @@ body {
             position: relative;
 
       .cell{
-        position: absolute;
-        border: 1px solid #aaa;
-        &.type-0{
-          background-color:red;
-        }
-        &.type-1{
-          background-color: transparent;
-        }
-        &.type-2{
-          background-color: #00b0e8;
-        }
+            position: absolute;
+            border: 1px solid #000;
+            &.type-0{
+              background-color:brown;
+            }
+            &.type-1{
+              background-color: white;
+            }
+            &.type-2{
+              background-color: white;
+            }
       }
       .tile{
             position: absolute;
+            border: 1px solid #000;
+            background-color:red;
       }
     }
   }
