after gh-pages initial comit

--- a/src/styl/test.styl
+++ b/src/styl/test.styl
@@ -32,5 +32,11 @@ body {
             border: 1px solid #000;
             background-color:red;
       }
+      .number-on-valid-cell{
+            color: yellow;
+      }
+      .number-out{
+            color: black;
+      }
     }
   }
