--- a/src/styl/test.styl
+++ b/src/styl/test.styl
@@ -13,7 +13,7 @@ body {
        .grid{
             max-width:600px;
             //height: 400px
-            background: #ddd;
+            //background: #ddd;
             position: relative;
             margin: 0;
 
@@ -21,13 +21,13 @@ body {
             position: absolute;
             border: 1px solid #000;
             &.type-0{
-              background-color:brown;
+              //background-color:brown;
             }
             &.type-1{
-              background-color: white;
+              //background-color: white;
             }
             &.type-2{
-              background-color: white;
+              //background-color: white;
             }
       }
       .tile{
@@ -46,3 +46,4 @@ body {
       }
     }
   }
+@import "new_design.styl"
